--- a/Test/myLayout/mywidget.ui
+++ b/Test/myLayout/mywidget.ui
@@ -6,46 +6,111 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>426</height>
+    <width>428</width>
+    <height>232</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>myWidget</string>
   </property>
-  <widget class="QFontComboBox" name="fontComboBox">
-   <property name="geometry">
-    <rect>
-     <x>9</x>
-     <y>9</y>
-     <width>84</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="textEdit">
-   <property name="geometry">
-    <rect>
-     <x>9</x>
-     <y>35</y>
-     <width>382</width>
-     <height>71</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>180</y>
-     <width>75</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QFormLayout" name="formLayout">
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="nLineEdit"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="sLabel">
+       <property name="text">
+        <string>性别(&amp;S)</string>
+       </property>
+       <property name="buddy">
+        <cstring>sLineEdit</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="sLineEdit"/>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="aLabel">
+       <property name="text">
+        <string>年龄(&amp;A)</string>
+       </property>
+       <property name="buddy">
+        <cstring>aLineEdit</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="aLineEdit"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="mLabel">
+       <property name="text">
+        <string>邮箱(&amp;M)</string>
+       </property>
+       <property name="buddy">
+        <cstring>mLineEdit</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="mLineEdit"/>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="nLabel">
+       <property name="text">
+        <string>姓名(&amp;N)</string>
+       </property>
+       <property name="buddy">
+        <cstring>nLineEdit</cstring>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QFontComboBox" name="fontComboBox"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>显示可扩展窗口</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QTextEdit" name="textEdit">
+     <property name="maximumSize">
+      <size>
+       <width>410</width>
+       <height>192</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
@@ -58,11 +123,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>170</x>
-     <y>14</y>
+     <y>126</y>
     </hint>
     <hint type="destinationlabel">
      <x>171</x>
-     <y>57</y>
+     <y>169</y>
     </hint>
    </hints>
   </connection>
